--- a/main.css
+++ b/main.css
@@ -2,3 +2,10 @@
   border: 1px solid black;
   text-align: center;
 }
+
+html, body {
+  background: rgb(20,20,20);
+  text-align: center;
+  height: 100%;
+  overflow: hidden;
+}
