--- a/main.css
+++ b/main.css
@@ -9,3 +9,11 @@ html, body {
   height: 100%;
   overflow: hidden;
 }
+
+.svg {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+    margin: 0 auto;
+  width: 320px;
+}
