stoke araray and offset and width for shape

--- a/main.css
+++ b/main.css
@@ -17,3 +17,10 @@ html, body {
     margin: 0 auto;
   width: 320px;
 }
+
+.shape {
+  stroke-dasharray: 140 540;
+  stroke-dashoffset: -474;
+  stroke-width: 8px;
+  fill: transparent;
+}
