--- a/main.css
+++ b/main.css
@@ -25,4 +25,5 @@ html, body {
   fill: transparent;
   stroke: #19f6e8;
   border-bottom: 5px solid black;
+  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s
 }
