--- a/main.css
+++ b/main.css
@@ -25,5 +25,10 @@ html, body {
   fill: transparent;
   stroke: #19f6e8;
   border-bottom: 5px solid black;
-  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s
+  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+}
+
+.text {
+  font-family: 'Roboto Condensed';
+  font-size: 22px;
 }
