color and position

--- a/main.css
+++ b/main.css
@@ -33,4 +33,7 @@ html, body {
   font-size: 22px;
   line height: 32px;
   letter-spacing: 8px;
+  color: #fff;
+  top: -48px;
+  position relative;
 }
