--- a/app.css
+++ b/app.css
@@ -9,6 +9,7 @@ html, body {
   transform: translateY(-50%);
 	  margin: 0 auto;
   width: 320px;
+  border-bottom: solid 1px white;
 }
 .shape {
   stroke-dasharray: 140 540;
